# ganeko-renewable-sim

./: .env.example  .gitignore  BUILD_COMPLETE  BUILD_STATE.json  DEPLOYMENT.md  Dockerfile  HEALTH_REPORT.md  Makefile  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  golden_reference_day.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.claude/: launch.json
app/: __init__.py  cli.py  logging_conf.py  main.py  quality.py  scheduler_runner.py  security.py  services.py  simulate.py  solar_geom.py
app/api/: deps.py  repository.py  routes_admin.py  routes_plants.py  schemas.py
app/config/: settings.py
app/dashboard/: __init__.py  router.py
app/dashboard/templates/: index.html
app/db/: __init__.py  base.py  models.py  seed.py
app/engines/: __init__.py  hybrid.py  solar.py  spec.py  texture.py  wind.py
app/scheduler/: __init__.py  service.py
app/weather/: __init__.py  client.py  normalize.py  store.py
app/wrapper/: __init__.py  auth.py  client.py  router.py
data/: app.out
docs/: WRAPPER_API.md
migrations/: env.py
migrations/versions/: 187b7cae8814_initial_schema.py
scripts/: auto_resume.sh  entrypoint.sh  poll_renewable_current.py  realism_check.py  test_renewable_api_access.py  tunnel.ps1
tests/: conftest.py  test_api.py  test_backfill.py  test_engines.py  test_normalize.py  test_quality.py  test_wrapper.py
