[project]
name = "renewable-sim"
version = "1.0.0"
description = "Solar / Wind / Hybrid renewable generation simulation platform with live Open-Meteo integration"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends() in defaults is intentional

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 100
